2018-May-10 1st commit for JoyWins SocialEconomicVenture

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,43 @@
+### JoyWins ###
+hidden*/
+Serverside/
+
+### Python ###
+.vs 
+.vscode
 *.pyc
 *~
 *__pycache__
 zvenv
 db.sqlite3
+/static
 .DS_Store
-git
+.ipynb_checkpoints
+*.ipynb
+
+
+# Created by https://www.gitignore.io/api/node,windows
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+
+# End of https://www.gitignore.io/api/node,windows
